@@ -41,7 +41,10 @@ sub run {
 
     if ($self->{daemonize}) {
         require Proc::Daemon;
-        eval { Proc::Daemon::Init->() };
+        eval {
+            Proc::Daemon::Init->();
+            $poe_kernel->has_forked();
+        };
         chomp $@;
         die "Can't daemonize: $@\n" if $@;
     }
